# binja-hexagon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
.allstar/: binary_artifacts.yaml
cmake/: Findgflags.cmake  clang_overrides.cmake
docs/: design.md  setup.md
plugin/: CMakeLists.txt  arch_hexagon.cc  decoder.cc  decoder.h  decoder_test.cc  gen_il_funcs.py  gen_il_funcs_data.py  gen_il_funcs_test.py  gen_insn_text_funcs.py  gen_insn_text_funcs_test.py  hex_regs.h  il_util.cc  il_util.h  il_util_test.cc  insn_util.cc  insn_util.h  insn_util_test.cc  packet_context.cc  packet_context.h  packet_db.cc  packet_db.h  packet_db_test.cc  relocs.h  status_macros.h  status_matchers.h  text_util.cc  text_util.h  type_util.py
scripts/: CMakeLists.txt  bn_disasm.py.in  disasm.sh.in  readelf.sh.in  strip.sh.in
test_binaries/: CMakeLists.txt  bn_hlil_test.py  bn_hlil_test_app.c  bn_llil_test.py  bn_llil_test_app.s  build_hlil_test.dockerfile  build_hlil_test.makefile  build_llil_test.dockerfile  build_llil_test.makefile
test_binaries/prebuilt/: bn_hlil_test_app  bn_llil_test  bn_llil_test_app
